[package]
name = "pjoo"
version = "0.1.0"
authors = ["nobodyJam <1257400056@qq.com>"]
edition = "2018"

[dependencies]
http_req = "0.4.9"
encoding = "0.2.33"
winapi = { version = "0.3", features = ["winuser","namedpipeapi","synchapi"] }
json = "0.11.13"
libc = "0.2.54"
[lib]
crate-type = ["rlib","dylib"] # could be `staticlib` as well